third_party/WebKit/Source/core/layout/LayoutMultiColumnSet.h
@@ -123,7 +123,7 @@ public:
 
     // Find the column that contains the given block offset, and return the translation needed to
     // get from flow thread coordinates to visual coordinates.
-    LayoutSize flowThreadTranslationAtOffset(LayoutUnit) const;
+    LayoutSize flowThreadTranslationAtOffset(LayoutUnit, CoordinateSpaceConversion) const;
 
     LayoutPoint visualPointToFlowThreadPoint(const LayoutPoint& visualPoint) const;
 
